--- a/Exercise_8/play_setup.yaml
+++ b/Exercise_8/play_setup.yaml
@@ -15,7 +15,7 @@
   - name: copy default php file
     copy:
       src: index.php
-      dest: /var/www/html/
+      dest: /var/www/html/index.php
       owner: root
       group: root
       mode: 0644
