--- a/Exam/ansible_laravel_deployment/ansible.cfg
+++ b/Exam/ansible_laravel_deployment/ansible.cfg
@@ -1,4 +1,9 @@
-[defaults]
+[laravel_app_server]
 inventory = hosts
 remote_user = azureuser
 private_key_file = deb_key.pem
+
+[master]
+inventory = hosts
+remote_user = azureuser
+private_key_file = master_key.pem
