update ssh connection

--- a/Exam/ansible_laravel_deployment/ansible.cfg
+++ b/Exam/ansible_laravel_deployment/ansible.cfg
@@ -1,9 +1,2 @@
-[laravel_app_server]
+[defaults]
 inventory = hosts
-remote_user = azureuser
-private_key_file = deb_key.pem
-
-[master]
-inventory = hosts
-remote_user = azureuser
-private_key_file = master_key.pem
