--- a/Exam/ansible_laravel_deployment/remote_lamp_setup.yaml
+++ b/Exam/ansible_laravel_deployment/remote_lamp_setup.yaml
@@ -109,7 +109,7 @@
           APP_ENV=local
           APP_KEY=
           APP_DEBUG=true
-          APP_URL=https://localhost
+          APP_URL=https://{{ domain_name }}
           APP_PORT=3000
           LOG_CHANNEL=stack
           LOG_DEPRECATIONS_CHANNEL=null
@@ -215,8 +215,8 @@
               ServerAdmin email@domain.com
               ServerName domain.com
               ServerAlias domain.com
-              DocumentRoot /var/www/{{ app_name }}/
-              <Directory /var/www/{{ app_name }}/>
+              DocumentRoot /var/www/{{ app_name }}/public
+              <Directory /var/www/{{ app_name }}/public>
                   Options Indexes FollowSymLinks
                   AllowOverride All
                   Require all granted
