--- a/third_semester/Terraform_Exercise/.gitignore
+++ b/third_semester/Terraform_Exercise/.gitignore
@@ -1,3 +1,18 @@
-.terraform
+**/.terraform/*
+*.tfstate
+*.tfstate.*
+crash.log
+crash.*.log
+*.tfvars
+*.tfvars.json
+override.tf
+override.tf.json
+*_override.tf
+*_override.tf.json
+.terraformrc
+terraform.rc
+.terraformrc.json
+terraform.rc.json
 .terraform.lock.hcl
-terraform.tfstate
+.terraform
+.gitignore
