cloned server template app from GitHub.

--- a/third_semester/Terraform_Exercise/webservers-config-files/apache2.yaml
+++ b/third_semester/Terraform_Exercise/webservers-config-files/apache2.yaml
@@ -1,7 +1,6 @@
 ---
-- name: Install Apache2
+- name: Webservers Configurations
   hosts: all
-  become: yes
   pre_tasks:
     - name: Update apt cache
       apt:
