--- a/third_semester/Terraform_Exercise/main.yaml
+++ b/third_semester/Terraform_Exercise/main.yaml
@@ -16,9 +16,10 @@
 
   - name: install php
     apt:
-      - php
-      - libapache2-mod-php
-    state: present
+      name:
+        - php
+        - libapache2-mod-php
+      state: present
 
   - name: Set timezone to Africa/Lagos
     timezone:
